--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@ local = "http://127.0.0.1:8545"
 
 [profile.peanut_v3]
 solc = "0.8.15"
-src = 'contracts_v3'
+src = 'contracts/contracts_v3'
 out = 'out'
 test = 'test/test_v3'
 libs = ["lib"]
@@ -11,7 +11,7 @@ remappings = []
 
 [profile.peanut_v4]
 solc = "0.8.20"
-src = 'contracts_v4'
+src = 'contracts/contracts_v4'
 out = 'out'
 test = 'test/test_v4'
 libs = ["lib"]
